--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -21,10 +21,15 @@
 
   <div class="navbar-end ">
     <div class="dropdown dropdown-end">
-      <label for="my-drawer-4" tabindex="0" class="btn btn-ghost btn-circle avatar">
+      <label *ngIf="!loggedIn" for="my-drawer-4" tabindex="0" class="btn btn-ghost btn-circle avatar">
         <div class="w-10 rounded-full">
-          <img *ngIf="loggedIn" src="/assets/images/logo.png" />
-          <img *ngIf="!loggedIn" src="/assets/images/unknownUser.png" />
+          <img src="/assets/images/unknownUser.png" />
+        </div>
+      </label>
+
+      <label *ngIf="loggedIn" tabindex="0" class="btn btn-ghost btn-circle avatar">
+        <div class="w-10 rounded-full">
+          <img src="/assets/images/logo.png" />
         </div>
       </label>
 
@@ -48,6 +53,7 @@
   <input id="my-drawer-4" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content">
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
   </div>
 
 
@@ -82,7 +88,7 @@
                   </div>
                   <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a>
                 </div>
-                <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign in</button>
+                <button (click)="toggleLoggedIn()" type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign in</button>
                 <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                   Don’t have an account yet? <a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>
                 </p>
