--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,5 +1,9 @@
 <p>landing works!</p>
 
+<!--
 <div *ngFor="let number of [].constructor(100); let i = index">
   <div>Contenido #{{i+1}}</div>
 </div>
+-->
+
+<app-join-card></app-join-card>
