--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -52,8 +52,12 @@
 
   <input id="my-drawer-4" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content">
-    <router-outlet></router-outlet>
-    <app-footer></app-footer>
+    <div class="w-full h-full bg-no-repeat bg-cover bg-fixed"
+      style="background-image: url('https://wallpaperaccess.com/full/47178.jpg');">
+      <router-outlet></router-outlet>
+      <app-footer></app-footer>
+    </div>
+
   </div>
 
 
