Basic card + basic fade in animation

--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,4 +1,4 @@
-<div [@fadeInOut]="isVisible ? 'visible' : 'hidden'">
+<div>
   <div class="card w-96 bg-black shadow-xl bg-opacity-75 ">
     <figure class="px-32 pt-5">
       <img src="/assets/images/logo.png" alt="Logo" class="rounded-xl" />
