--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,9 +1,1 @@
-<p>landing works!</p>
-
-<!--
-<div *ngFor="let number of [].constructor(100); let i = index">
-  <div>Contenido #{{i+1}}</div>
-</div>
--->
-
-<app-join-card></app-join-card>
+<app-landing-join></app-landing-join>
