--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -71,7 +71,7 @@
               <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                 Login con Discord
               </h1>
-              <div class="flex">
+              <div class="flex flex-col gap-4">
                 <button class="btn btn-primary btn-discord" *ngIf="!isLogin" (click)="login()">Login</button>
                 <button class="btn btn-primary btn-discord" *ngIf="isLogin" (click)="logout()">Login</button>
                 <h2 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
@@ -84,6 +84,7 @@
                 <button class="btn btn-neutral" (click)="loginAdmin()">Admin</button>
               </div>
               <h2>Resultado</h2>
+              <div>{{textResult}}</div>
             </div>
           </div>
         </div>
