--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -5,7 +5,7 @@
   <div class="join-card-wrap">
     <app-join-card></app-join-card>
   </div>
-  <div class="join-info-wrap">
+  <!-- <div class="join-info-wrap">
     <app-join-info></app-join-info>
-  </div>
+  </div> -->
 </div>
