--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -74,7 +74,7 @@
               </h1>
               <div class="flex flex-col gap-4">
                 <button class="btn btn-primary btn-discord" *ngIf="!isLogin" (click)="login()">Login</button>
-                <button class="btn btn-primary btn-discord" *ngIf="isLogin" (click)="logout()">Login</button>
+                <button class="btn btn-primary btn-discord" *ngIf="isLogin" (click)="logout()">Logout</button>
                 <h2 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                   ¿Cuál es tu rol más alto?
                 </h2>
