--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -1,5 +1,5 @@
 <div class="landing-join flex flex-row">
-  <video class="background-video" preload autoplay muted loop controls>
+  <video class="background-video" autoplay muted loop>
     <source src="/assets/videos/video.mp4" type="video/mp4">
   </video>
   <div class="join-card-wrap">
