--- a/src/app/components/landing-join/landing-join.component.css
+++ b/src/app/components/landing-join/landing-join.component.css
@@ -3,14 +3,14 @@
   justify-content: center;
   align-items: center;
   height: calc(100vh - 66px);
-
+/* 
   .join-card-wrap {
     margin-right: 100px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-  }
+  } */
 
   .background-video {
     position: absolute;
