--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -61,21 +61,21 @@
   </div>
 
 
-  <div class="drawer-side">
+  <div class="drawer-side ">
     <label for="my-drawer-4" class="drawer-overlay"></label>
-    <ul class="menu p-4 w-1/3 bg-alFilo-gray-100/90">
+    <ul class="menu w-1/3 bg-alFilo-gray-100/90 p-0">
       <!-- Sidebar content here -->
-      <section class="bg-gray-50 dark:bg-gray-900 ">
+      <section class="bg-gray-900 ">
         <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-          <div class="w-full bg-white rounded-tr-3xl rounded-3xl shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-            <div class="p-6 space-y-4 md:space-y-6 sm:p-8 bg-alFilo-gray-100 rounded-tr-3xl rounded-3xl">
-              <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+          <div class="w-full bg-white rounded-tr-3xl rounded-3xl shadow border md:mt-0 sm:max-w-md xl:p-0 bg-gray-800 border-gray-700">
+            <div class="p-6 space-y-4 md:space-y-6 sm:p-8 rounded-tr-3xl rounded-3xl">
+              <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl text-white">
                 Login con Discord
               </h1>
               <div class="flex flex-col gap-4">
                 <button class="btn btn-primary btn-discord" *ngIf="!isLogin" (click)="login()">Login</button>
                 <button class="btn btn-primary btn-discord" *ngIf="isLogin" (click)="logout()">Logout</button>
-                <h2 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+                <h2 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl text-white">
                   ¿Cuál es tu rol más alto?
                 </h2>
                 <button class="btn btn-neutral" (click)="loginTestAlfilo()">Afiliado</button>
