fix text result test login

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -84,8 +84,8 @@
                 <button class="btn btn-neutral" (click)="loginEspada()">Espada</button>
                 <button class="btn btn-neutral" (click)="loginAdmin()">Admin</button>
               </div>
-              <h2>Resultado</h2>
-              <div>{{textResult}}</div>
+              <div class="font-bold text-xl text-white">Resultado</div>
+              <div class="font-bold text-xl text-white">{{textResult}}</div>
             </div>
           </div>
         </div>
