fixed video autoplay

--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,13 +1,11 @@
 <div>
-  <div class="card w-96 bg-black shadow-xl bg-opacity-75 ">
-    <figure class="px-32 pt-5">
-      <img src="/assets/images/logo.png" alt="Logo" class="rounded-xl" />
-    </figure>
-    <div class="card-body pt-5 items-center text-center ">
-      <p class="pb-5 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque congue tempor.</p>
-      <div class="card-actions">
-        <button class="btn bg-blue-500 text-black border border-white">Únete a AlFilo</button>
-      </div>
+  <div class="card w-96 h-52 bg-black shadow-xl bg-opacity-75 ">
+    <div class="flex">
+      <img src="/assets/images/background.jpg" alt="Logo" class="rounded-xl h-52 w-5/12 object-cover" />
+      <div class="card-body">
+        <h2 class="card-title text-white">Un makina el lother haciendo el video</h2>
+        <p class="text-white">KAMI HAZ TU EL FRONTEND NO TE JODE.</p>
     </div>
+  </div>
   </div>
 </div>
