basic theme + navbar refactor

--- a/src/app/components/join-card/join-card.component.html
+++ b/src/app/components/join-card/join-card.component.html
@@ -4,9 +4,9 @@
       <img src="/assets/images/logo.png" alt="Logo" class="rounded-xl" />
     </figure>
     <div class="card-body pt-5 items-center text-center ">
-      <p class="pb-5 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque congue tempor.</p>
+      <p class="pb-5 text-base">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque congue tempor.</p>
       <div class="card-actions">
-        <button class="btn bg-blue-500 text-black border border-white">Únete a AlFilo</button>
+        <a href="https://discord.com/invite/ADgezdG" class="btn text-black ring-2 ring-white rounded-2xl font-black">Únete a AlFilo</a>
       </div>
     </div>
   </div>
