--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -1,10 +1,9 @@
 <div class="landing-join flex flex-row">
-  <video #myVideo class="background-video" loop muted autoplay>
-    <source src="/assets/videos/video.mp4" type="video/mp4">
+  <video #myVideo class="background-video" muted autoplay>
+    <source src="/assets/videos/video2.mp4" type="video/mp4">
   </video>
   <div class="join-card-wrap">
     <app-join-card></app-join-card>
-    <app-basic-card></app-basic-card>
   </div>
   <!-- <div class="join-info-wrap">
     <app-join-info></app-join-info>
