--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-200 sticky top-0 z-50">
+<div class="navbar bg-base-100 sticky top-0 z-50">
   <div class="navbar-start">
     <div class="dropdown">
       <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -6,45 +6,46 @@
       </label>
       <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-200 rounded-box w-52">
         <!-- TODO personalizar activeTab -->
-        <li *ngFor="let item of navItems"><a routerLink="{{item.path}}" [ngClass]="{'text-white' : item.active, 'text-base' : !item.active}">{{item.name}}</a></li>
+        <li *ngFor="let item of navItems"><a routerLink="{{item.path}}" [ngClass]="{'text-accent' : item.active, 'text-base' : !item.active}">{{item.name}}</a></li>
       </ul>
     </div>
     <a class="btn btn-ghost normal-case text-xl hidden lg:flex">AlFilo</a>
   </div>
 
-  <div class="navbar-center">
-    <a class="btn btn-ghost normal-case text-xl lg:hidden">AlFilo</a>
-    <div class="tabs hidden lg:inline-flex">
-      <a *ngFor="let item of navItems" routerLink="{{item.path}}"  class="tab" [ngClass]="{'text-white' : item.active, 'text-base' : !item.active}">{{item.name}}</a>
+  <div class="navbar-end">
+    <div class="w-5/6 flex justify-end">
+      <div class="tabs hidden lg:inline-flex">
+        <a *ngFor="let item of navItems" routerLink="{{item.path}}"  class="tab hover:bg-secondary rounded-lg " [ngClass]="{'text-accent' : item.active, 'text-base-content' : !item.active}">{{item.name}}</a>
+      </div>
     </div>
-  </div>
+    <div class="w-1/6 flex justify-end">
+      <div class="dropdown dropdown-end">
+        <label *ngIf="!loggedIn" for="my-drawer-4" tabindex="0" class="btn btn-ghost btn-circle avatar">
+          <div class="w-10 rounded-full">
+            <img src="/assets/images/unknownUser.png"  alt="UserNotLogged"/>
+          </div>
+        </label>
 
+        <label *ngIf="loggedIn" tabindex="0" class="btn btn-ghost btn-circle avatar">
+          <div class="w-10 rounded-full">
+            <img src="/assets/images/logo.png" alt="LoggedUser"/>
+          </div>
+        </label>
 
-  <div class="navbar-end ">
-    <div class="dropdown dropdown-end">
-      <label *ngIf="!loggedIn" for="my-drawer-4" tabindex="0" class="btn btn-ghost btn-circle avatar">
-        <div class="w-10 rounded-full">
-          <img src="/assets/images/unknownUser.png"  alt="UserNotLogged"/>
-        </div>
-      </label>
-
-      <label *ngIf="loggedIn" tabindex="0" class="btn btn-ghost btn-circle avatar">
-        <div class="w-10 rounded-full">
-          <img src="/assets/images/logo.png" alt="LoggedUser"/>
-        </div>
-      </label>
-
-      <ul *ngIf="loggedIn" tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-52">
-        <li>
-          <a class="justify-between">
-            Profile
-            <span class="badge">New</span>
-          </a>
-        </li>
-        <li><a>Settings</a></li>
-        <li><a (click)="logout()">Logout</a></li>
-      </ul>
+        <ul *ngIf="loggedIn" tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-52">
+          <li>
+            <a class="justify-between">
+              Profile
+              <span class="badge">New</span>
+            </a>
+          </li>
+          <li><a>Settings</a></li>
+          <li><a (click)="logout()">Logout</a></li>
+        </ul>
+      </div>
     </div>
+
+
   </div>
 </div>
 
