--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -75,17 +75,19 @@
               <div class="flex flex-col gap-4">
                 <button class="btn btn-primary btn-discord" *ngIf="!isLogin" (click)="login()">Login</button>
                 <button class="btn btn-primary btn-discord" *ngIf="isLogin" (click)="logout()">Logout</button>
-                <h2 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl text-white">
-                  ¿Cuál es tu rol más alto?
-                </h2>
-                <button class="btn btn-neutral" (click)="loginTestAlfilo()">Afiliado</button>
-                <button class="btn btn-neutral" (click)="loginTestCadete()">Cadete</button>
-                <button class="btn btn-neutral" (click)="loginTestDaga()">Daga</button>
-                <button class="btn btn-neutral" (click)="loginEspada()">Espada</button>
-                <button class="btn btn-neutral" (click)="loginAdmin()">Admin</button>
+                <div *ngIf="isLogin" class="flex flex-col gap-4">
+                  <h2 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl text-white">
+                    ¿Cuál es tu rol más alto?
+                  </h2>
+                  <input type="radio" class="btn" (click)="loginTestAlfilo()" name="button" aria-label="Afiliado"/>
+                  <input type="radio" class="btn" (click)="loginTestCadete()" name="button" aria-label="Cadete"/>
+                  <input type="radio" class="btn" (click)="loginTestDaga()" name="button" aria-label="Daga"/>
+                  <input type="radio" class="btn" (click)="loginEspada()" name="button" aria-label="Espada"/>
+                  <input type="radio" class="btn" (click)="loginAdmin()" name="button" aria-label="Admin"/>
+                  <h2 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl text-white">Resultado</h2>
+                  <h2 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl text-white">{{textResult}}</h2>
+                </div>
               </div>
-              <div class="font-bold text-xl text-white">Resultado</div>
-              <div class="font-bold text-xl text-white">{{textResult}}</div>
             </div>
           </div>
         </div>
