login drawer recolor

--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -3,8 +3,8 @@
     <div class="flex">
       <img src="/assets/images/background.jpg" alt="Logo" class="rounded-xl h-52 w-5/12 object-cover" />
       <div class="card-body">
-        <h2 class="card-title text-white">Un makina el lother haciendo el video</h2>
-        <p class="text-white">KAMI HAZ TU EL FRONTEND NO TE JODE.</p>
+        <h2 class="card-title text-white">TITLE</h2>
+        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque congue</p>
     </div>
   </div>
   </div>
