--- a/src/app/components/join-card/join-card.component.html
+++ b/src/app/components/join-card/join-card.component.html
@@ -1,12 +1,13 @@
 <div [@fadeInOut]="isVisible ? 'visible' : 'hidden'">
   <div class="card w-96 bg-black shadow-xl bg-opacity-75 ">
     <figure class="px-32 pt-5">
-      <img src="/assets/images/logo.png" alt="Logo" class="rounded-xl" />
+      <img src="/assets/images/logo.png" alt="Logo" class="rounded-xl"/>
     </figure>
     <div class="card-body pt-5 items-center text-center ">
       <p class="pb-5 text-base">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque congue</p>
       <div class="card-actions">
-        <a href="https://discord.com/invite/ADgezdG" class="btn text-black ring-2 ring-white rounded-2xl font-black">Únete a AlFilo</a>
+        <a href="https://discord.com/invite/ADgezdG" class="btn text-black ring-2 ring-white rounded-2xl font-black">Únete
+          a AlFilo</a>
       </div>
     </div>
   </div>
