--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -1,5 +1,5 @@
-<div class="landing-join flex flex-row">
-  <video #myVideo class="background-video" muted autoplay>
+<div class="landing-join flex max-w-2k flex-row">
+  <video #myVideo class="background-video  " muted autoplay>
     <source src="/assets/videos/video2.mp4" type="video/mp4">
   </video>
   <div class="join-card-wrap">
