--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,10 +1,10 @@
 <div>
-  <div class="card w-96 h-52 bg-black shadow-xl bg-opacity-75 ">
+  <div class="card border w-96 h-53 bg-black shadow-xl bg-opacity-75 ">
     <div class="flex">
-      <img src="/assets/images/background.jpg" alt="Logo" class="rounded-xl h-52 w-5/12 object-cover" />
+      <img src="/assets/images/background.jpg" alt="Logo" class="rounded-l-2xl w-5/12 object-cover" />
       <div class="card-body">
-        <h2 class="card-title text-white">TITLE</h2>
-        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras scelerisque congue</p>
+        <h2 class="card-title text-white">{{title}}</h2>
+        <p class="text-white">{{body}}</p>
     </div>
   </div>
   </div>
