--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,2 +1,3 @@
 <app-landing-join></app-landing-join>
 <app-landing-activities></app-landing-activities>
+<app-landing-chronology></app-landing-chronology>
