--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="card border w-96 h-53 bg-black shadow-xl bg-opacity-75 ">
+  <div class="card border w-96 bg-black shadow-xl bg-opacity-75 ">
     <div class="flex">
       <img src="/assets/images/background.jpg" alt="Logo" class="rounded-l-2xl w-5/12 object-cover" />
       <div class="card-body">
