--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,9 +1,9 @@
 <div class="landing-activities max-w-2k mx-auto flex justify-center">
-  <video #myVideo class="background-video absolute max-w-2k w-full object-cover -z-10" muted autoplay>
+  <video #myVideo class="background-video absolute max-w-2k w-full object-cover -z-10" muted autoplay loop>
     <source src="/assets/videos/landing_activities_combat.mp4" type="video/mp4">
   </video>
   <div class="flex flex-col w-full">
-    <div class="basis-6/12 flex flex-col basis items-center gap-10 pt-20">
+    <div class="basis-7/12 flex flex-col basis items-center gap-10 pt-20">
       <div class="font-bold text-4xl">PARTICIPA EN DIFERENTES</div>
       <div class="font-bold text-8xl">ACTIVIDADES</div>
       <div class="flex gap-20">
@@ -12,8 +12,37 @@
           <a href="https://https://robertsspaceindustries.com" class="btn text-black ring-2 ring-white rounded-2xl font-black">Juega Star Citizen</a>
       </div>
     </div>
-    <div class=" basis-6/12 border-t-2 border-r-2 w-6/12 self-start rounded-tr-2xl flex justify-end pt-20 pr-20">
-      <app-basic-card title="COMBATE" body='Eventos en los que el JcJ hace que todo sea imprevisible y emocionante.'></app-basic-card>
+    <div class="basis-5/12 border-t-2 border-r-2 w-6/12 self-start rounded-tr-2xl flex flex-col items-end">
+      <div class="-mt-[6.6rem] flex gap-10">
+        <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
+          <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
+          <div class="font-bold text-lg">COMBATE</div>
+          <input type="radio" class="radio radio-info bg-white" name="activityOption" aria-label=""/>
+        </div>
+        <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
+          <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
+          <div class="font-bold text-lg">INDUSTRIA</div>
+          <input type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
+        </div>
+        <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
+          <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
+          <div class="font-bold text-lg">APOYO</div>
+          <input type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
+        </div>
+        <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
+          <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
+          <div class="font-bold text-lg">EXPLORACIÓN</div>
+          <input type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
+        </div>
+        <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
+          <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
+          <div class="lala font-bold text-lg">CARRERAS</div>
+          <input type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
+        </div>
+      </div>
+      <div class="m-20">
+        <app-basic-card title="COMBATE" body='Eventos en los que el JcJ hace que todo sea imprevisible y emocionante.'></app-basic-card>
+      </div>
     </div>
   </div>
 </div>
