--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -9,7 +9,7 @@
       <div class="flex gap-20">
         <a href="https://discord.com/invite/ADgezdG" class="btn text-black ring-2 ring-white rounded-2xl font-black">Únete
           a AlFilo</a>
-          <a href="https://https://robertsspaceindustries.com" class="btn text-black ring-2 ring-white rounded-2xl font-black">Juega Star Citizen</a>
+          <a href="https://robertsspaceindustries.com" class="btn text-black ring-2 ring-white rounded-2xl font-black">Juega Star Citizen</a>
       </div>
     </div>
     <div class="basis-5/12 border-t-2 border-r-2 w-6/12 self-start rounded-tr-2xl flex flex-col items-end">
@@ -21,12 +21,7 @@
         </div>
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
           <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
-          <div class="font-bold text-lg">INDUSTRIA</div>
-          <input type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
-        </div>
-        <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
-          <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
-          <div class="font-bold text-lg">APOYO</div>
+          <div class="font-bold text-lg">TRANSPORTE</div>
           <input type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
         </div>
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
@@ -36,7 +31,17 @@
         </div>
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
           <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
-          <div class="lala font-bold text-lg">CARRERAS</div>
+          <div class="font-bold text-lg">INDUSTRIA</div>
+          <input type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
+        </div>
+        <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
+          <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
+          <div class="font-bold text-lg">SOPORTE</div>
+          <input type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
+        </div>
+        <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
+          <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
+          <div class="lala font-bold text-lg">COMPETICIÓN</div>
           <input type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
         </div>
       </div>
