add cards for all activities and click event

--- a/src/app/components/join-card/join-card.component.html
+++ b/src/app/components/join-card/join-card.component.html
@@ -4,7 +4,7 @@
       <img src="/assets/images/logo.png" alt="Logo" class="rounded-xl"/>
     </figure>
     <div class="card-body pt-5 items-center text-center ">
-      <p class="pb-5 text-base">En AL FILO queremos ver todo el contenido del juego con un ritmo sano</p>
+      <p class="pb-5 text-xl text-base">La aventura te espera</p>
       <div class="card-actions">
         <a href="https://discord.com/invite/ADgezdG" class="btn text-black ring-2 ring-white rounded-2xl font-black">Únete
           a AlFilo</a>
