--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -6,10 +6,10 @@
     <div class="join-card-wrap flex justify-end pb-32">
       <app-join-card></app-join-card>
     </div>
-    <div class="basic-card-wrap self-end flex gap-10 pb-10">
-      <app-basic-card title="¿Qué es al filo?" body='En AL FILO queremos ver todo el contenido del juego con ritmo sano. Nos consideramos un clan "Pro-Billete".'></app-basic-card>
-      <app-basic-card title="Juega en compañia" body="En Al FiLO encontrarás gente sana y con ganas de disfrutar de Star Citizen tanto como tu. "></app-basic-card>
-      <app-basic-card title="Crea eventos" body="Participa en neustras actividades del clan y conviertete en un miembrto de pleno derecho, llamado Daga. "></app-basic-card>
+    <div class="basic-card-wrap self-end flex justify-stretch gap-10 pb-10">
+      <app-basic-card class="flex justify-stretch" title="AL FILO" body='Una comunidad disfrutar en compañia de todo el contenido de Star Citizen con un ritmo sano.'></app-basic-card>
+      <app-basic-card class="flex justify-stretch" title="Estilo de juego" body="Somos Pro-Billete. Cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>
+      <app-basic-card class="flex justify-stretch" title="Hazte DAGA" body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>
     </div>
   </div>
 </div>
