--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,11 +1,9 @@
-<div>
-  <div class="card border w-96 bg-black shadow-xl bg-opacity-75 ">
-    <div class="flex">
-      <img src="/assets/images/background.jpg" alt="Logo" class="rounded-l-2xl w-5/12 object-cover" />
-      <div class="card-body">
-        <h2 class="card-title text-white">{{title}}</h2>
-        <p class="text-white">{{body}}</p>
+<div class="card border h-64 w-96 bg-black shadow-xl bg-opacity-75">
+  <div class="flex h-full">
+    <img src="/assets/images/background.jpg" alt="Logo" class="rounded-l-2xl w-5/12 object-cover" />
+    <div class="card-body">
+      <h2 class="card-title text-white">{{title}}</h2>
+      <p class="text-white">{{body}}</p>
     </div>
-  </div>
   </div>
 </div>
