--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -81,7 +81,7 @@
               </h1>
               <div class="flex flex-col gap-4">
                 <button class="btn btn-primary btn-discord" *ngIf="!isLogin" (click)="login()">Login</button>
-                <button class="btn btn-primary btn-discord" *ngIf="isLogin" (click)="logout()">Logout</button>
+                <button class="btn btn-primary btn-discord" disabled *ngIf="isLogin" (click)="logout()">Logout</button>
                 <div *ngIf="isLogin" class="flex flex-col gap-4">
                   <h2 class="text-xl font-bold leading-tight tracking-tight  md:text-2xl text-white">
                     ¿Cuál es tu rol más alto?
