--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -34,7 +34,7 @@
         </div>
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
           <img src="/assets/images/logo.png" alt="" class="w-10 h-10">
-          <div class="font-bold text-lg">SOPORTE</div>
+          <div class="font-bold text-lg">APOYO</div>
           <input (click)="changeActivity('support')" type="radio" class="radio radio-info bg-white hover:text-[#8cb9ca] checked:bg-[#0394cc]" name="activityOption" aria-label=""/>
         </div>
         <div class="activity-option flex flex-col items-center gap-3 text-white hover:text-[#8cb9ca]">
