--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -48,7 +48,7 @@
         <app-basic-card *ngIf="transportSelected" title="TRANSPORTE" body='Pasajeros, Datos, Cargamento valioso o tu ruta favorita.'></app-basic-card>
         <app-basic-card *ngIf="explorationSelected" title="EXPLORACIÓN" body='Misterio, aventura, descubrimientos, ciencia y navegar por los confines del espacio.'></app-basic-card>
         <app-basic-card *ngIf="industrialSelected" title="INDUSTRIA" body='Recursos, pequeñas aventuras y la maquinaria mas pesada.'></app-basic-card>
-        <app-basic-card *ngIf="supportSelected" title="SOPORTE" body='Rescates, reabastecimiento y la medicina mas moderna.'></app-basic-card>
+        <app-basic-card *ngIf="supportSelected" title="APOYO" body='Rescates, reabastecimiento y la medicina mas moderna.'></app-basic-card>
         <app-basic-card *ngIf="competitionSelected" title="COMPETICIÓN" body='Prepárate para superar tus limites.'></app-basic-card>
       </div>
     </div>
