add images for activities

--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -44,12 +44,12 @@
         </div>
       </div>
       <div class="m-10">
-        <app-basic-card *ngIf="combatSelected" title="COMBATE" body='Adrenalina, táctica, fuerza y valor.'></app-basic-card>
-        <app-basic-card *ngIf="transportSelected" title="TRANSPORTE" body='Pasajeros, Datos, Cargamento valioso o tu ruta favorita.'></app-basic-card>
-        <app-basic-card *ngIf="explorationSelected" title="EXPLORACIÓN" body='Misterio, aventura, descubrimientos, ciencia y navegar por los confines del espacio.'></app-basic-card>
-        <app-basic-card *ngIf="industrialSelected" title="INDUSTRIA" body='Recursos, pequeñas aventuras y la maquinaria mas pesada.'></app-basic-card>
-        <app-basic-card *ngIf="supportSelected" title="APOYO" body='Rescates, reabastecimiento y la medicina mas moderna.'></app-basic-card>
-        <app-basic-card *ngIf="competitionSelected" title="COMPETICIÓN" body='Prepárate para superar tus limites.'></app-basic-card>
+        <app-basic-card *ngIf="combatSelected" srcImage="activity_combat.png" title="COMBATE" body='Adrenalina, táctica, fuerza y valor.'></app-basic-card>
+        <app-basic-card *ngIf="transportSelected" srcImage="activity_transport.png" title="TRANSPORTE" body='Pasajeros, Datos, Cargamento valioso o tu ruta favorita.'></app-basic-card>
+        <app-basic-card *ngIf="explorationSelected" srcImage="activity_exploration.png" title="EXPLORACIÓN" body='Misterio, aventura, descubrimientos, ciencia y navegar por los confines del espacio.'></app-basic-card>
+        <app-basic-card *ngIf="industrialSelected" srcImage="activity_industrial.png" title="INDUSTRIA" body='Recursos, pequeñas aventuras y la maquinaria mas pesada.'></app-basic-card>
+        <app-basic-card *ngIf="supportSelected" srcImage="activity_support.png" title="APOYO" body='Rescates, reabastecimiento y la medicina mas moderna.'></app-basic-card>
+        <app-basic-card *ngIf="competitionSelected" srcImage="activity_competition.png" title="COMPETICIÓN" body='Prepárate para superar tus limites.'></app-basic-card>
       </div>
     </div>
   </div>
