modify links with blank

--- a/src/app/components/join-card/join-card.component.html
+++ b/src/app/components/join-card/join-card.component.html
@@ -6,7 +6,7 @@
     <div class="card-body pt-5 items-center text-center ">
       <p class="pb-5 text-xl text-base">La aventura te espera</p>
       <div class="card-actions">
-        <a href="https://discord.com/invite/ADgezdG" class="btn text-black ring-2 ring-white rounded-2xl font-black">Únete
+        <a href="https://discord.com/invite/ADgezdG" target="_blank" class="btn text-black ring-2 ring-white rounded-2xl font-black">Únete
           a AlFilo</a>
       </div>
     </div>
