--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -5,9 +5,9 @@
       <div class="font-bold text-4xl">PARTICIPA EN DIFERENTES</div>
       <div class="font-bold text-8xl">ACTIVIDADES</div>
       <div class="flex gap-20">
-        <a href="https://discord.com/invite/ADgezdG" class="btn text-black ring-2 ring-white rounded-2xl font-black">Únete
+        <a href="https://discord.com/invite/ADgezdG" target="_blank" class="btn text-black ring-2 ring-white rounded-2xl font-black">Únete
           a AlFilo</a>
-          <a href="https://robertsspaceindustries.com" class="btn text-black ring-2 ring-white rounded-2xl font-black">Juega Star Citizen</a>
+        <a href="https://robertsspaceindustries.com" target="_blank" class="btn text-black ring-2 ring-white rounded-2xl font-black">Juega Star Citizen</a>
       </div>
     </div>
     <div class="basis-4/12 border-t-2 border-r-2 w-6/12 self-start rounded-tr-2xl flex flex-col items-end">
