add chronology-card component

--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -1,6 +1,12 @@
 <div class="landing-chronology bg-[url('/assets/images/background-landing-chronology.jpg')] bg-cover max-w-2k mx-auto flex">
-  <div class="border-r-2 border-b-2 basis-6/12 rounded-br-2xl h-5/6 flex justify-end p-20">
+  <div class="border-r-2 border-b-2 basis-6/12 rounded-br-2xl h-5/6 flex flex-col items-end gap-20">
     <div class="font-bold text-7xl">CRONOLOGÍA</div>
+    <app-chronology-card left="false" srcImage="activity_competition.png" title="Se une Lil Medusa" body='Prepárate para superar tus limites.'></app-chronology-card>
+    <app-chronology-card left="false" srcImage="activity_competition.png" title="Se otorga el cargo de Puto amo a Lil Medusa" body='Prepárate para superar tus limites.'></app-chronology-card>
   </div>
-  <div class="basis-6/12"></div>
+  <div class="basis-6/12 flex flex-col gap-20">
+    <app-chronology-card left="false" srcImage="activity_competition.png" title="Fundación de Al Filo" body='Prepárate para superar tus limites.'></app-chronology-card>
+    <app-chronology-card left="false" srcImage="activity_competition.png" title="Lil Medusa se presenta al cargo de Puto amo" body='Prepárate para superar tus limites.'></app-chronology-card>
+    <app-chronology-card left="false" srcImage="activity_competition.png" title="Lil Medusa deja la organización" body='Prepárate para superar tus limites.'></app-chronology-card>
+  </div>
 </div>
