boolean in input for chronology-card

--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -5,8 +5,8 @@
     <app-chronology-card left="false" srcImage="activity_competition.png" title="Se otorga el cargo de Puto amo a Lil Medusa" body='Prepárate para superar tus limites.'></app-chronology-card>
   </div>
   <div class="basis-6/12 flex flex-col gap-20">
-    <app-chronology-card left="false" srcImage="activity_competition.png" title="Fundación de Al Filo" body='Prepárate para superar tus limites.'></app-chronology-card>
-    <app-chronology-card left="false" srcImage="activity_competition.png" title="Lil Medusa se presenta al cargo de Puto amo" body='Prepárate para superar tus limites.'></app-chronology-card>
-    <app-chronology-card left="false" srcImage="activity_competition.png" title="Lil Medusa deja la organización" body='Prepárate para superar tus limites.'></app-chronology-card>
+    <app-chronology-card left="true" srcImage="activity_competition.png" title="Fundación de Al Filo" body='Prepárate para superar tus limites.'></app-chronology-card>
+    <app-chronology-card left="true" srcImage="activity_competition.png" title="Lil Medusa se presenta al cargo de Puto amo" body='Prepárate para superar tus limites.'></app-chronology-card>
+    <app-chronology-card left="true" srcImage="activity_competition.png" title="Lil Medusa deja la organización" body='Prepárate para superar tus limites.'></app-chronology-card>
   </div>
 </div>
