--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,6 +1,6 @@
-<div class="card border h-64 w-[32rem] bg-black shadow-xl bg-opacity-75">
+<div class="card rounded-none h-64 w-[32rem] bg-black shadow-xl">
   <div class="flex h-full">
-    <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-5/12 object-cover" />
+    <img src="/assets/images/{{srcImage}}" alt="Logo" class=" w-5/12 object-cover" />
     <div class="card-body">
       <h2 class="card-title text-white">{{title}}</h2>
       <p class="text-white">{{body}}</p>
