--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -1,7 +1,7 @@
 <div class="landing-join max-w-2k mx-auto flex justify-center">
-  <video #myVideo class="background-video absolute max-w-2k w-full object-cover z-0" muted autoplay>
-    <source src="/assets/videos/video2.mp4" type="video/mp4">
-  </video>
+
+  <img class="background-video absolute max-w-2k w-full object-cover z-0" src="assets/images/corsairAlFilo.png" alt="Landing Join">
+
   <div class="h-full flex flex-col justify-end">
     <div class="join-card-wrap flex justify-end pb-32">
       <app-join-card></app-join-card>
